--- a/nb-next/package.json
+++ b/nb-next/package.json
@@ -15,7 +15,8 @@
     "primereact": "^10.8.3",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^20",
